# MiSKZI-Ciphers

./: .gitignore  README.md  comands.txt  log.txt  main.py  pyproject.toml
ciphers/atbash/: cipher.py
ciphers/book_cipher/: cipher.py
ciphers/caesar/: cipher.py
ciphers/magic_square/: cipher.py
ciphers/polybius/: cipher.py
ciphers/scytale/: cipher.py
common/: io_utils.py  keyparse.py  registry.py  types.py
data/adfgvx/: variants.json
data/affine/: variants.json
data/alberti/: free_text.txt  variants.json
data/atbash/: variants.json
data/binary_code/: free_text.txt  variants.json
data/book_cipher/: free_text.txt  variants.json
data/caesar/: variants.json
data/cardano_grille/: free_text.txt  variants.json
data/gronsfeld/: variants.json
data/hill/: variants.json
data/litorea/: free_text.txt  variants.json
data/magic_square/: free_text.txt  variants.json
data/morse/: variants.json
data/polybius/: free_text.txt  variants.json
data/richelieu/: variants.json
data/scytale/: free_text.txt  variants.json
data/trisemus/: free_text.txt  variants.json
data/vernam/: variants.json
data/vigenere/: variants.json
src/miskzi_ciphers/: cli.py
src/miskzi_ciphers/app/: service.py
src/miskzi_ciphers/ciphers/adfgvx/: __init__.py  cipher.py
src/miskzi_ciphers/ciphers/affine/: cipher.py
src/miskzi_ciphers/ciphers/alberti/: cipher.py
src/miskzi_ciphers/ciphers/atbash/: cipher.py
src/miskzi_ciphers/ciphers/bacon/: cipher.py
src/miskzi_ciphers/ciphers/binary_code/: cipher.py
src/miskzi_ciphers/ciphers/book_cipher/: cipher.py
src/miskzi_ciphers/ciphers/caesar/: cipher.py
src/miskzi_ciphers/ciphers/cardano_grille/: cipher.py
src/miskzi_ciphers/ciphers/gronsfeld/: cipher.py
src/miskzi_ciphers/ciphers/hill/: cipher.py
src/miskzi_ciphers/ciphers/litorea/: cipher.py
src/miskzi_ciphers/ciphers/magic_square/: cipher.py
src/miskzi_ciphers/ciphers/morse/: cipher.py
src/miskzi_ciphers/ciphers/polybius/: cipher.py
src/miskzi_ciphers/common/: alphabet.py  io_utils.py  math_utils.py  paths.py  registry.py
src/miskzi_ciphers/ui/: app.py  i18n.py
tests/: test_alphabet.py  test_caesar.py  test_ciphers_contract.py  test_contract_registry.py  test_paths.py  test_pz3_vectors.py  test_pz4_vectors.py  test_service.py  test_ui_i18n.py  test_ui_localization_labels.py  test_variants_meta.py  test_variants_schema.py
(+5 files in other folders)
