[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miskzi-ciphers"
version = "0.8.4"
description = "Educational toolkit of classical ciphers for MiSKZI practice"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
keywords = ["cryptography", "classical-ciphers", "education", "MiSKZI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Security :: Cryptography"
]

dependencies = []

[project.optional-dependencies]
ui = [
    "streamlit>=1.30",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]

[project.scripts]
miskzi = "miskzi_ciphers.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
